# ResearchAI

./: Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docker-image_ci.yml
docs/researchai/: app.md
researchai/: app.py
tests/: test_app.py
