[tool.poetry]
name = "researchai"
version = "0.1.0"
description = ""
authors = ["HuseynG <huseyndev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.12.2"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.1"
mkdocstrings-python = "^1.9.0"
pre-commit = "^3.7.0"
pyupgrade = "^3.15.2"


[tool.poetry.group.dev.dependencies]
black = "==24.3.0"
pytest = "==8.1.1"
isort = "==5.13.2"
flake8 = "==7.0.0"
pytest-cov = "==4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black formatting
[tool.black]
line-length = 150
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .hg
    | .mypy_cache
    | .tox
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
'''
# iSort
[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"

[tool.flake8]
exclude = "venv"
ignore = ["E501", "W503", "E226"]
# E501: Line too long
# W503: Line break occurred before binary operator
# E226: Missing white space around arithmetic operator
